--- a/QuanAo/Aodaitay.html
+++ b/QuanAo/Aodaitay.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="asset/css/style.css" />
+    <link rel="stylesheet" href="../asset/css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -15,7 +15,7 @@
       <div class="container">
         <div class="row-flex">
           <div class="header-logo">
-            <img src="asset/image/logo.png" alt="" />
+            <img src="../asset/image/logo.png" alt="" />
           </div>
           <div class="header-nav">
             <nav>
@@ -23,21 +23,21 @@
                 <li class="dropdown">
                   <a href="#">QUẦN NAM</a>
                   <ul class="dropdown-menu">
-                    <li><a href="QuanAo/Quanbo.html">Quần Bò</a></li>
-                    <li><a href="QuanAo/Quanvai.html">Quần Vải</a></li>
+                    <li><a href=" Quanbo.html">Quần Bò</a></li>
+                    <li><a href="Quanvai.html">Quần Vải</a></li>
                     <li>
-                      <a href="QuanAo/Quanthethao.html">Quần Thể Thao</a>
+                      <a href="Quanthethao.html">Quần Thể Thao</a>
                     </li>
-                    <li><a href="QuanAo/Quanshort.html">Quần Short</a></li>
+                    <li><a href="Quanshort.html">Quần Short</a></li>
                   </ul>
                 </li>
                 <li><a href="#">LIÊN HỆ</a></li>
                 <li class="dropdown">
                   <a href="#">ÁO NAM</a>
                   <ul class="dropdown-menu">
-                    <li><a href="QuanAo/Aopolo.html">Áo Polo Nam</a></li>
-                    <li><a href="QuanAo/Aodaitay.html">Áo Dài Tay</a></li>
-                    <li><a href="QuanAo/Aolen.html">Áo Len</a></li>
+                    <li><a href="Aopolo.html">Áo Polo Nam</a></li>
+                    <li><a href="Aodaitay.html">Áo Dài Tay</a></li>
+                    <li><a href="Aolen.html">Áo Len</a></li>
                   </ul>
                 </li>
               </ul>
@@ -60,11 +60,11 @@
     <section class="slider">
       <div class="slider-items">
         <div class="slider-item">
-          <img src="asset/image/banner1.webp.crdownload" alt="" />
+          <img src="../asset/image/banner1.webp.crdownload" alt="" />
         </div>
         <div class="slider-item">
           <img
-            src="asset/image/banner2.jpg!bw700"
+            src="../asset/image/banner2.jpg!bw700"
             alt=""
             width="2048px"
             height="987px"
@@ -72,7 +72,7 @@
         </div>
         <div class="slider-item">
           <img
-            src="asset/image/banner3.webp"
+            src="../asset/image/banner3.webp"
             alt=""
             width="2048px"
             height="987px"
@@ -80,7 +80,7 @@
         </div>
         <div class="slider-item">
           <img
-            src="asset/image/banner4.png"
+            src="../asset/image/banner4.png"
             alt=""
             width="2048px"
             height="987px"
@@ -100,7 +100,17 @@
         </div>
         <div class="row-grid row-grid-hot-product">
           <div class="hot-product-item">
-            <img src="asset/image/at2.png" alt="" />
+            <img src="../asset/image/at1.png" alt="" />
+            <p>Áo thun dài tay Aristino ALT006W2</p>
+            <span>100% Cotton</span>
+            <div class="hot-product-item-price">
+              <p>
+                900,000 <sup>đ</sup> <span>950,000 <sup>đ</sup></span>
+              </p>
+            </div>
+          </div>
+          <div class="hot-product-item">
+            <img src="../asset/image/at2.png" alt="" />
             <p>Áo thun dài tay Aristino ALT003W2</p>
             <span>100% Cotton</span>
             <div class="hot-product-item-price">
@@ -110,38 +120,38 @@
             </div>
           </div>
           <div class="hot-product-item">
-            <img src="asset/image/2.jpg" alt="" />
-            <p>Áo Polo có cổ ngắn tay Insidemen IPS036AZ</p>
+            <img
+              src="../asset/image/at3.png"
+              alt=""
+              width="256px"
+              height="325px"
+            />
+            <p>Áo thun dài tay Aristino ALT002W2</p>
             <span>100% Cotton</span>
             <div class="hot-product-item-price">
               <p>
-                150,000 <sup>đ</sup> <span>200,000 <sup>đ</sup></span>
+                525,000 <sup>đ</sup> <span>750,000 <sup>đ</sup></span>
               </p>
             </div>
           </div>
           <div class="hot-product-item">
-            <img src="asset/image/10.jpg" alt="" width="256px" height="325px" />
-            <p>Áo Polo có cổ ngắn tay Insidemen IPS036AZ</p>
+            <img
+              src="../asset/image/at4.png"
+              alt=""
+              width="256px"
+              height="325px"
+            />
+            <p>Áo T-shirt dài tay nam Aristino ALT004W2</p>
             <span>100% Cotton</span>
             <div class="hot-product-item-price">
               <p>
-                190,000 <sup>đ</sup> <span>210,000 <sup>đ</sup></span>
+                780,000 <sup>đ</sup> <span>795,000 <sup>đ</sup></span>
               </p>
             </div>
           </div>
           <div class="hot-product-item">
-            <img src="asset/image/9.jpg" alt="" width="256px" height="325px" />
-            <p>Áo Polo có cổ ngắn tay Insidemen IPS036AZ</p>
-            <span>100% Cotton</span>
-            <div class="hot-product-item-price">
-              <p>
-                130,000 <sup>đ</sup> <span>190,000 <sup>đ</sup></span>
-              </p>
-            </div>
-          </div>
-          <div class="hot-product-item">
-            <img src="asset/image/al5.png" alt="" />
-            <p>Áo len nam Aristino AWOR01</p>
+            <img src="../asset/image/at5.png" alt="" />
+            <p>Áo T-shirt dài tay Aristino ALTR03</p>
             <span>100% Cotton</span>
             <div class="hot-product-item-price">
               <p>
@@ -156,80 +166,11 @@
     <section class="hot-product">
       <div class="container">
         <div class="row-grid">
-          <p class="heading-text">San Pham Pho Bien</p>
+          <p class="heading-text">San Pham Noi Bat</p>
         </div>
         <div class="row-grid row-grid-hot-product">
           <div class="hot-product-item">
-            <img src="asset/image/1.jpg" alt="" />
-            <p>Áo Polo có cổ ngắn tay Insidemen IPS036AZ</p>
-            <span>100% Cotton</span>
-            <div class="hot-product-item-price">
-              <p>
-                190,000 <sup>đ</sup> <span>230,000 <sup>đ</sup></span>
-              </p>
-            </div>
-          </div>
-          <div class="hot-product-item">
-            <img src="asset/image/at5.png" alt="" />
-            <p>Áo thun dài tay Aristino ALT003W2</p>
-            <span>100% Cotton</span>
-            <div class="hot-product-item-price">
-              <p>
-                888,000 <sup>đ</sup> <span>895,000 <sup>đ</sup></span>
-              </p>
-            </div>
-          </div>
-          <div class="hot-product-item">
-            <img src="asset/image/10.jpg" alt="" width="256px" height="325px" />
-            <p>Áo Polo có cổ ngắn tay Insidemen IPS036AZ</p>
-            <span>100% Cotton</span>
-            <div class="hot-product-item-price">
-              <p>
-                170,000 <sup>đ</sup> <span>190,000 <sup>đ</sup></span>
-              </p>
-            </div>
-          </div>
-          <div class="hot-product-item">
-            <img src="asset/image/pl2.png" alt="" />
-            <p>Áo polo nam ngắn tay Aristino APS098AZ</p>
-            <span>100% Cotton</span>
-            <div class="hot-product-item-price">
-              <p>
-                888,000 <sup>đ</sup> <span>895,000 <sup>đ</sup></span>
-              </p>
-            </div>
-          </div>
-          <div class="hot-product-item">
-            <img src="asset/image/6.jpg" alt="" />
-            <p>Áo Polo có cổ ngắn tay Insidemen IPS036AZ</p>
-            <span>100% Cotton</span>
-            <div class="hot-product-item-price">
-              <p>
-                160,000 <sup>đ</sup> <span>20,000 <sup>đ</sup></span>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="hot-product">
-      <div class="container">
-        <div class="row-grid">
-          <p class="heading-text"></p>
-        </div>
-        <div class="row-grid row-grid-hot-product">
-          <div class="hot-product-item">
-            <img src="asset/image/1.jpg" alt="" />
-            <p>Áo Polo có cổ ngắn tay Insidemen IPS036AZ</p>
-            <span>100% Cotton</span>
-            <div class="hot-product-item-price">
-              <p>
-                190,000 <sup>đ</sup> <span>230,000 <sup>đ</sup></span>
-              </p>
-            </div>
-          </div>
-          <div class="hot-product-item">
-            <img src="asset/image/at1.png" alt="" />
+            <img src="../asset/image/at1.png" alt="" />
             <p>Áo thun dài tay Aristino ALT006W2</p>
             <span>100% Cotton</span>
             <div class="hot-product-item-price">
@@ -239,27 +180,116 @@
             </div>
           </div>
           <div class="hot-product-item">
-            <img src="asset/image/10.jpg" alt="" width="256px" height="325px" />
-            <p>Áo Polo có cổ ngắn tay Insidemen IPS036AZ</p>
+            <img src="../asset/image/at2.png" alt="" />
+            <p>Áo thun dài tay Aristino ALT003W2</p>
             <span>100% Cotton</span>
             <div class="hot-product-item-price">
               <p>
-                170,000 <sup>đ</sup> <span>190,000 <sup>đ</sup></span>
+                888,000 <sup>đ</sup> <span>895,000 <sup>đ</sup></span>
               </p>
             </div>
           </div>
           <div class="hot-product-item">
-            <img src="asset/image/9.jpg" alt="" width="256px" height="325px" />
-            <p>Áo Polo có cổ ngắn tay Insidemen IPS036AZ</p>
+            <img
+              src="../asset/image/at3.png"
+              alt=""
+              width="256px"
+              height="325px"
+            />
+            <p>Áo thun dài tay Aristino ALT002W2</p>
             <span>100% Cotton</span>
             <div class="hot-product-item-price">
               <p>
-                130,000 <sup>đ</sup> <span>150,000 <sup>đ</sup></span>
+                525,000 <sup>đ</sup> <span>750,000 <sup>đ</sup></span>
               </p>
             </div>
           </div>
           <div class="hot-product-item">
-            <img src="asset/image/at5.png" alt="" />
+            <img
+              src="../asset/image/at4.png"
+              alt=""
+              width="256px"
+              height="325px"
+            />
+            <p>Áo T-shirt dài tay nam Aristino ALT004W2</p>
+            <span>100% Cotton</span>
+            <div class="hot-product-item-price">
+              <p>
+                780,000 <sup>đ</sup> <span>795,000 <sup>đ</sup></span>
+              </p>
+            </div>
+          </div>
+          <div class="hot-product-item">
+            <img src="../asset/image/at5.png" alt="" />
+            <p>Áo T-shirt dài tay Aristino ALTR03</p>
+            <span>100% Cotton</span>
+            <div class="hot-product-item-price">
+              <p>
+                945,000 <sup>đ</sup> <span>965,000 <sup>đ</sup></span>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="hot-product">
+      <div class="container">
+        <div class="row-grid">
+          <p class="heading-text">San Pham Noi Bat</p>
+        </div>
+        <div class="row-grid row-grid-hot-product">
+          <div class="hot-product-item">
+            <img src="../asset/image/at1.png" alt="" />
+            <p>Áo thun dài tay Aristino ALT006W2</p>
+            <span>100% Cotton</span>
+            <div class="hot-product-item-price">
+              <p>
+                900,000 <sup>đ</sup> <span>950,000 <sup>đ</sup></span>
+              </p>
+            </div>
+          </div>
+          <div class="hot-product-item">
+            <img src="../asset/image/at2.png" alt="" />
+            <p>Áo thun dài tay Aristino ALT003W2</p>
+            <span>100% Cotton</span>
+            <div class="hot-product-item-price">
+              <p>
+                888,000 <sup>đ</sup> <span>895,000 <sup>đ</sup></span>
+              </p>
+            </div>
+          </div>
+          <div class="hot-product-item">
+            <img
+              src="../asset/image/at3.png"
+              alt=""
+              width="256px"
+              height="325px"
+            />
+            <p>Áo thun dài tay Aristino ALT002W2</p>
+            <span>100% Cotton</span>
+            <div class="hot-product-item-price">
+              <p>
+                525,000 <sup>đ</sup> <span>750,000 <sup>đ</sup></span>
+              </p>
+            </div>
+          </div>
+          <div class="hot-product-item">
+            <img
+              src="../asset/image/at4.png"
+              alt=""
+              width="256px"
+              height="325px"
+            />
+            <p>Áo T-shirt dài tay nam Aristino ALT004W2</p>
+            <span>100% Cotton</span>
+            <div class="hot-product-item-price">
+              <p>
+                780,000 <sup>đ</sup> <span>795,000 <sup>đ</sup></span>
+              </p>
+            </div>
+          </div>
+          <div class="hot-product-item">
+            <img src="../asset/image/at5.png" alt="" />
             <p>Áo T-shirt dài tay Aristino ALTR03</p>
             <span>100% Cotton</span>
             <div class="hot-product-item-price">
@@ -297,6 +327,6 @@
         </div>
       </div>
     </footer>
-    <script src="asset/js/script.js"></script>
+    <script src="../asset/js/script.js"></script>
   </body>
 </html>
